docs/book/samples/appa/seq_wrap_check.out
error[formatting]: needless continuation: this statement fits on one line (35 characters)
  --> seq_wrap_check.kso:2:3
   2 |   >> print "serving"
         ^
